--- a/html_foundations/links-and-images/index.html
+++ b/html_foundations/links-and-images/index.html
@@ -16,7 +16,7 @@
 
         <a href="./pages/about.html">About</a>
 
-        <img src="./images/dog.jpg">
+        <img src="./images/dog.jpg" alt="The Odin Project dog">
 
     </body>
 
